More Yealink fixes
-Spelling
-Wrong var
-Updated power_saving schema to be uniform across all devices to best written variable logic. - Good job whoever built it. IF YOU HAVE SET THIS UP IN THE PAST IN THE OLD FORMAT IT MAY BREAK. $yealink_powersave_* vars have been depreciated in favor of $yealink_ps_* since logic has been built to allow more with less total vars.
-Added some documentation

--- a/resources/templates/provision/yealink/t33g/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t33g/{$mac}.cfg
@@ -5,7 +5,7 @@
 ##T33P/T33G :X ranges from 1 to 4
 ##T30/T30P Not Support
 #######################################################################################
-##                                   Trnasfer                                        ##       
+##                                   Transfer                                        ##       
 #######################################################################################
 account.1.phone_setting.call_appearance.transfer_via_new_linekey= {$yealink_transfer_via_new_linekey}
 
