--- a/resources/templates/provision/yealink/t53/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t53/{$mac}.cfg
@@ -4,7 +4,7 @@
 ##account.X.*:(T54S/T48G/T48S/T46G/T46S/T29G: X ranges from 1 to 16. T52S/T42G/T42S: X ranges from 1 to 12. T41P/T41S/T27P/T27G: X ranges from 1 to 6. T40P/T40G/T23P/T23G: X ranges from 1 to 3. T21(P) E2: X ranges from 1 to 2.)##
 
 #######################################################################################
-##                                   Trnasfer                                        ##       
+##                                   Transfer                                        ##       
 #######################################################################################
 account.1.phone_setting.call_appearance.transfer_via_new_linekey=
 
@@ -564,7 +564,7 @@ bw.virtual_user.1.xsi.user=
 
 
 #######################################################################################
-##                                   Trnasfer                                        ##       
+##                                   Transfer                                        ##       
 #######################################################################################
 account.2.phone_setting.call_appearance.transfer_via_new_linekey=
 
@@ -1090,7 +1090,7 @@ pstn.account.2.label=
 
 
 #######################################################################################
-##                                   Trnasfer                                        ##       
+##                                   Transfer                                        ##       
 #######################################################################################
 account.1.phone_setting.call_appearance.transfer_via_new_linekey=
 
@@ -1617,7 +1617,7 @@ pstn.account.3.label=
 
 
 #######################################################################################
-##                                   Trnasfer                                        ##       
+##                                   Transfer                                        ##       
 #######################################################################################
 account.4.phone_setting.call_appearance.transfer_via_new_linekey=
 
@@ -2143,7 +2143,7 @@ pstn.account.4.label=
 
 
 #######################################################################################
-##                                   Trnasfer                                        ##       
+##                                   Transfer                                        ##       
 #######################################################################################
 account.5.phone_setting.call_appearance.transfer_via_new_linekey=
 
@@ -2683,7 +2683,7 @@ bw.virtual_user.1.xsi.user=
 
 
 #######################################################################################
-##                                   Trnasfer                                        ##       
+##                                   Transfer                                        ##       
 #######################################################################################
 account.6.phone_setting.call_appearance.transfer_via_new_linekey=
 
@@ -3210,7 +3210,7 @@ pstn.account.6.label=
 
 
 #######################################################################################
-##                                   Trnasfer                                        ##       
+##                                   Transfer                                        ##       
 #######################################################################################
 account.7.phone_setting.call_appearance.transfer_via_new_linekey=
 
@@ -3737,7 +3737,7 @@ pstn.account.7.label=
 
 
 #######################################################################################
-##                                   Trnasfer                                        ##       
+##                                   Transfer                                        ##       
 #######################################################################################
 account.8.phone_setting.call_appearance.transfer_via_new_linekey=
 
@@ -4264,7 +4264,7 @@ pstn.account.8.label=
 
 
 #######################################################################################
-##                                   Trnasfer                                        ##       
+##                                   Transfer                                        ##       
 #######################################################################################
 account.9.phone_setting.call_appearance.transfer_via_new_linekey=
 
@@ -4791,7 +4791,7 @@ pstn.account.9.label=
 
 
 #######################################################################################
-##                                   Trnasfer                                        ##       
+##                                   Transfer                                        ##       
 #######################################################################################
 account.10.phone_setting.call_appearance.transfer_via_new_linekey=
 
