--- a/resources/templates/provision/yealink/t54w/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t54w/{$mac}.cfg
@@ -15,7 +15,7 @@
 ## account.X.enable = ?????????????????????????????????????????????????????????????????????????????????????????????????????????????
 
 #######################################################################################
-##                                   Trnasfer                                        ##       
+##                                   Transfer                                        ##       
 #######################################################################################
 account.{$row.line_number}.phone_setting.call_appearance.transfer_via_new_linekey=
 
