--- a/resources/templates/provision/yealink/t53w/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t53w/{$mac}.cfg
@@ -4,7 +4,7 @@
 ##account.X.*:(T54S/T48G/T48S/T46G/T46S/T29G: X ranges from 1 to 16. T52S/T42G/T42S: X ranges from 1 to 12. T41P/T41S/T27P/T27G: X ranges from 1 to 6. T40P/T40G/T23P/T23G: X ranges from 1 to 3. T21(P) E2: X ranges from 1 to 2.)##
 
 #######################################################################################
-##                                   Trnasfer                                        ##       
+##                                   Transfer                                        ##       
 #######################################################################################
 account.1.phone_setting.call_appearance.transfer_via_new_linekey=
 
@@ -565,7 +565,7 @@ bw.virtual_user.1.xsi.user=
 
 
 #######################################################################################
-##                                   Trnasfer                                        ##       
+##                                   Transfer                                        ##       
 #######################################################################################
 account.2.phone_setting.call_appearance.transfer_via_new_linekey=
 
@@ -1092,7 +1092,7 @@ pstn.account.2.label=
 
 
 #######################################################################################
-##                                   Trnasfer                                        ##       
+##                                   Transfer                                        ##       
 #######################################################################################
 account.1.phone_setting.call_appearance.transfer_via_new_linekey=
 
@@ -1620,7 +1620,7 @@ pstn.account.3.label=
 
 
 #######################################################################################
-##                                   Trnasfer                                        ##       
+##                                   Transfer                                        ##       
 #######################################################################################
 account.4.phone_setting.call_appearance.transfer_via_new_linekey=
 
@@ -2147,7 +2147,7 @@ pstn.account.4.label=
 
 
 #######################################################################################
-##                                   Trnasfer                                        ##       
+##                                   Transfer                                        ##       
 #######################################################################################
 account.5.phone_setting.call_appearance.transfer_via_new_linekey=
 
@@ -2688,7 +2688,7 @@ bw.virtual_user.1.xsi.user=
 
 
 #######################################################################################
-##                                   Trnasfer                                        ##       
+##                                   Transfer                                        ##       
 #######################################################################################
 account.6.phone_setting.call_appearance.transfer_via_new_linekey=
 
@@ -3216,7 +3216,7 @@ pstn.account.6.label=
 
 
 #######################################################################################
-##                                   Trnasfer                                        ##       
+##                                   Transfer                                        ##       
 #######################################################################################
 account.7.phone_setting.call_appearance.transfer_via_new_linekey=
 
@@ -3744,7 +3744,7 @@ pstn.account.7.label=
 
 
 #######################################################################################
-##                                   Trnasfer                                        ##       
+##                                   Transfer                                        ##       
 #######################################################################################
 account.8.phone_setting.call_appearance.transfer_via_new_linekey=
 
@@ -4272,7 +4272,7 @@ pstn.account.8.label=
 
 
 #######################################################################################
-##                                   Trnasfer                                        ##       
+##                                   Transfer                                        ##       
 #######################################################################################
 account.9.phone_setting.call_appearance.transfer_via_new_linekey=
 
@@ -4800,7 +4800,7 @@ pstn.account.9.label=
 
 
 #######################################################################################
-##                                   Trnasfer                                        ##       
+##                                   Transfer                                        ##       
 #######################################################################################
 account.10.phone_setting.call_appearance.transfer_via_new_linekey=
 
