--- a/resources/templates/provision/yealink/t5x/y000000000095.cfg
+++ b/resources/templates/provision/yealink/t5x/y000000000095.cfg
@@ -410,7 +410,7 @@ static.auto_provision.encryption.config =
 
 
 #######################################################################################
-##                                   Trnasfer                                        ##       
+##                                   Transfer                                        ##       
 #######################################################################################
 features.transfer_type= {$yealink_transfer_type}
 dialplan.transfer.mode = {$yealink_transfer_mode}
@@ -1558,10 +1558,11 @@ screensaver.xml_browser.url= {$yealink_screensaver_xml_url}
 ##                                  Power Saving                                     ##
 #######################################################################################
 features.power_saving.enable = {$yealink_ps_enabled}
-
+##Written in 24hr
 features.power_saving.power_led_flash.on_time = {$yealink_ps_led_on}
 features.power_saving.power_led_flash.off_time = {$yealink_ps_led_off}
 
+##Written in 24hr, values should be comma delimited, e.g. 9,17
 {if isset($yealink_ps_days_all)}
 features.power_saving.office_hour.monday = {$yealink_ps_days_all}
 features.power_saving.office_hour.tuesday = {$yealink_ps_days_all}
@@ -1588,6 +1589,7 @@ features.power_saving.office_hour.saturday = {$yealink_ps_day_saturday}
 features.power_saving.office_hour.sunday = {$yealink_ps_day_sunday}
 {/if}
 
+##Written in minutes
 features.power_saving.user_input_ext.idle_timeout = {$yealink_ps_idle_timeout}
 features.power_saving.off_hour.idle_timeout = {$yealink_ps_offhour_timeout}
 features.power_saving.office_hour.idle_timeout = {$yealink_ps_hour_timeout}
