--- a/resources/templates/provision/polycom/6.x/{$mac}.cfg
+++ b/resources/templates/provision/polycom/6.x/{$mac}.cfg
@@ -140,7 +140,7 @@
 		tcpIpApp.sntp.daylightSavings.stop.dayOfWeek.lastInMonth="0"
 	/>
 	<DIALPLAN
-		{if $polycom_emergency_customized == "true") }
+		{if $polycom_emergency_customized == "true"}
 			dialplan.routing.server.1.address="{$polycom_emergency_server}"
 			dialplan.routing.server.1.port="{$polycom_emergency_port}"
 				{foreach $polycom_emergency_number as $number name=emergencynumbers}
