--- a/resources/templates/provision/yealink/t56a/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t56a/{$mac}.cfg
@@ -102,6 +102,10 @@ account.1.register_mac =
 account.1.register_line = 
 account.1.reg_fail_retry_interval = 
 
+#set encryption
+account.1.srtp_encryption= {$yealink_srtp_encryption}
+#this is a dirty way to do this, ideally this entire template needs to be brought in line with the t54w template which has more options for settings and doesn't have account.1,2,3,etc 
+
 
 ######################################################################################
 ##                     NAT Settings                                                 ##
