Update to add variables for expansion module background
The expansion module can use a different background image

The wallpaper_upload.url setting in yealink can be used multiple times to download multiple images.

setup for 2 more variable:
$yealink_t46u_wallpaper_expansion
and 
$yealink_t46u_wallpaper_expansion_filename

This is only a template update. I did not push any additional varaibles up into the default settings.

--- a/resources/templates/provision/yealink/t46u/y000000000108.cfg
+++ b/resources/templates/provision/yealink/t46u/y000000000108.cfg
@@ -1630,7 +1630,12 @@ phone_setting.backgrounds =  Config:yealink_t46u_wallpaper.png
 phone_setting.backgrounds_with_dsskey_unfold=
 
 ##expansion_module.backgrounds(Only support T5XW/T54S/T52S/T43U/T46U/T48U)
+wallpaper_upload.url = {$yealink_t46u_wallpaper_expansion}
+{if isset($yealink_t46u_wallpaper_expansion_filename)}
+expansion_module.backgrounds=Config:{$yealink_t46u_wallpaper_expansion_filename}
+{else}
 expansion_module.backgrounds=
+{/if}
 
 
 #######################################################################################
