Grandstream: Added toggleable DHCP Time settings, XML app support, jitter buffer and VLAN. Yealink T46S: Headset ringtone and Voicemail fixes Polycom 4.x: Backported Cisco CDP variable

--- a/resources/templates/provision/polycom/4.x/{$mac}.cfg
+++ b/resources/templates/provision/polycom/4.x/{$mac}.cfg
@@ -79,6 +79,10 @@
 		device.sntp.gmtOffset="{$polycom_gmt_offset}"
 		device.prov.upgradeServer.set="1"
 		device.prov.upgradeServer="{$polycom_firmware_url}"
+		{if isset($polycom_cdp_enabled)}
+		device.net.cdpEnabled.set="1"
+		device.net.cdpEnabled="{$polycom_cdp_enabled}"
+		{/if}
 
 		{if isset($admin_password)}
 		device.auth.localUserPassword.set="1" 
