--- a/resources/templates/provision/yealink/t46s/y000000000066.cfg
+++ b/resources/templates/provision/yealink/t46s/y000000000066.cfg
@@ -1054,7 +1054,7 @@ features.voice_mail_alert.enable=
 features.voice_mail_popup.enable = {$yealink_voice_mail_popup_enable}
 features.voice_mail_tone_enable=
 features.hide_feature_access_codes.enable = {$yealink_hide_feature_access_codes_enable}
-voice_mail.number.1=
+voice_mail.number.1 = {$voicemail_number}
 
 
 #######################################################################################  
@@ -1093,7 +1093,7 @@ voice.handset_send=
 voice.handfree_send =
 voice.headset_send =
 features.intercom.headset_prior.enable=
-features.ringer_device.is_use_headset=
+features.ringer_device.is_use_headset = {$yealink_headset_ringer}
 
 
 #######################################################################################  
