Use yealink_trust_certificates 0-Disabled, 1-Enabled instead of false and true

--- a/resources/templates/provision/yealink/vp59/y000000000091.cfg
+++ b/resources/templates/provision/yealink/vp59/y000000000091.cfg
@@ -908,7 +908,7 @@ static.security.user_password = {$admin_name}:{$admin_password}
 ###It enables or disables the phone to only accept the certificates in the Trusted Certificates list.
 ###0-Disabled,1-Enabled.
 ###The default value is 1.It takes effect after a reboot.
-static.security.trust_certificates = {if $yealink_trust_certificates == "false"}0{elseif $yealink_trust_certificates == "true"}1{/if}
+static.security.trust_certificates = {$yealink_trust_certificates}
 
 ###It configures the source certificates for the phone to authenticate for TLS connection.
 ###0-Default certificates,1-Custom certificates,2-All certificates.
