--- a/resources/templates/provision/yealink/t57w/y000000000097.cfg
+++ b/resources/templates/provision/yealink/t57w/y000000000097.cfg
@@ -356,7 +356,7 @@ static.security.cn_validation =
 static.security.dev_cert = 
 static.security.ca_cert = 
 
-static.security.trust_certificates = {if $yealink_trust_certificates == "false"}0{elseif $yealink_trust_certificates == "true"}1{/if}
+static.security.trust_certificates = {$yealink_trust_certificates}
 
 security.tls_cipher_list = {$yealink_security_tls_cipher_list}
 
