--- a/resources/templates/provision/yealink/t5x/y000000000095.cfg
+++ b/resources/templates/provision/yealink/t5x/y000000000095.cfg
@@ -354,7 +354,7 @@ static.security.default_ssl_method =
 static.security.cn_validation = 
 static.security.dev_cert = 
 static.security.ca_cert = 
-static.security.trust_certificates = {if $yealink_trust_certificates == "false"}0{elseif $yealink_trust_certificates == "true"}1{/if}
+static.security.trust_certificates = {$yealink_trust_certificates}
 security.tls_cipher_list = {$yealink_security_tls_cipher_list}
 {if isset($user_name) }
 static.security.user_name.user = {$user_name}
