--- a/resources/templates/provision/yealink/t58v/y000000000058.cfg
+++ b/resources/templates/provision/yealink/t58v/y000000000058.cfg
@@ -1591,5 +1591,6 @@ features.doorphone.%d.unlock_pin =
 #######################################################################################
 ##                      APP                                                          ##
 #######################################################################################
-{foreach $yealink_app_unavailable as $value}app.unavailable = {$value}{"\n"}{/foreach}
+pm.version = standard
+app.unavailable = {foreach $yealink_app_unavailable as $value}{$value}/{/foreach}
 
