--- a/resources/templates/provision/yealink/cp960/y000000000073.cfg
+++ b/resources/templates/provision/yealink/cp960/y000000000073.cfg
@@ -1633,4 +1633,5 @@ firmware.url = {$yealink_firmware_url}/{$yealink_firmware_cp960}
 #######################################################################################
 ##                      APP                                                         ##       
 #######################################################################################
-{foreach $yealink_app_unavailable as $value}app.unavailable = {$value}{"\n"}{/foreach}
+pm.version = standard
+app.unavailable = {foreach $yealink_app_unavailable as $value}{$value}/{/foreach}
