--- a/resources/templates/provision/yealink/t58a/y000000000058.cfg
+++ b/resources/templates/provision/yealink/t58a/y000000000058.cfg
@@ -1570,4 +1570,5 @@ expansion_module.1.key.1.extension =
 #######################################################################################
 ##                      APP                                                         ##       
 #######################################################################################
-{foreach $yealink_app_unavailable as $value}app.unavailable = {$value}{"\n"}{/foreach}
+pm.version = standard
+app.unavailable = {foreach $yealink_app_unavailable as $value}{$value}/{/foreach}
