--- a/resources/templates/provision/yealink/vp59/y000000000091.cfg
+++ b/resources/templates/provision/yealink/vp59/y000000000091.cfg
@@ -1529,22 +1529,6 @@ features.video_call_bandwidth =
 video.enable =
 features.default_layout =
 
-#######################################################################################
-##                      APP                                                         ##       
-#######################################################################################
-app.install_url = 
-app.uninstall =
-{foreach $yealink_app_unavailable as $value}app.unavailable = {$value}{"\n"}{/foreach}
-app.autorun =
-custom.static.system_mode =
-custom.static.system_mode_selection =
-custom.static.system_mode_enable = 
-features.action_call_answer =
-features.action_contact =
-features.action_dialer =
-features.action_dsskey =
-features.action_history =
-
 
 #######################################################################################
 ##                      Broadsoft  Emergency Call                                    ##       
@@ -1774,4 +1758,22 @@ search_in_dialing.meta_directory.enable =
 ##                          Contact Backup                                           ##       
 #######################################################################################
 static.auto_provision.local_contact.backup.path =
-static.auto_provision.local_contact.backup.enable=
+static.auto_provision.local_contact.backup.enable =
+
+#######################################################################################
+##                      APP                                                         ##       
+#######################################################################################
+app.install_url = 
+app.uninstall =
+pm.version = standard
+app.unavailable = {foreach $yealink_app_unavailable as $value}{$value}/{/foreach}
+app.autorun =
+custom.static.system_mode =
+custom.static.system_mode_selection =
+custom.static.system_mode_enable = 
+features.action_call_answer =
+features.action_contact =
+features.action_dialer =
+features.action_dsskey =
+features.action_history =
+
