[yealink] fix g722 enable

--- a/resources/templates/provision/yealink/t54w/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t54w/{$mac}.cfg
@@ -100,7 +100,7 @@ account.{$row.line_number}.codec.g729.enable= {if isset($yealink_codec_g729_enab
 
 account.{$row.line_number}.codec.g722.priority= {if isset($yealink_codec_g722_priority)}{$yealink_codec_g722_priority}{else}0{/if}
 
-account.{$row.line_number}.codec.g722.enable= {if isset($yealink_codec_g722_enable)}1{else}0{/if}
+account.{$row.line_number}.codec.g722.enable= {if isset($yealink_codec_g722_enable)}{$yealink_codec_g722_enable}{else}0{/if}
 
 account.{$row.line_number}.codec.G722_1_24kpbs.priority=
 account.{$row.line_number}.codec.G722_1_24kpbs.enable=
