--- a/resources/templates/provision/yealink/t46u/y000000000108.cfg
+++ b/resources/templates/provision/yealink/t46u/y000000000108.cfg
@@ -1495,6 +1495,10 @@ phone_setting.dialnow_delay = {$yealink_dialplan_dialnow_delay}
 dialplan_dialnow.url=
 dialplan.dialnow.line_id.1=
 dialplan.dialnow.rule.1 = {$yealink_dialplan_dialnow_rule_1}
+dialplan.dialnow.rule.2 = {$yealink_dialplan_dialnow_rule_2}
+dialplan.dialnow.rule.3 = {$yealink_dialplan_dialnow_rule_3}
+dialplan.dialnow.rule.4 = {$yealink_dialplan_dialnow_rule_4}
+dialplan.dialnow.rule.5 = {$yealink_dialplan_dialnow_rule_5}
 dialplan.block_out.line_id.1=
 dialplan.block_out.number.1=
 dialplan.area_code.line_id =
@@ -1950,4 +1954,3 @@ acd.trace_fixed_display.enable =
 features.parked_call_monitor.blf_visual_enable=
 features.parked_call_monitor.blf_audio_enable=
 features.parked_call_monitor.blf.ring_type=
-
