--- a/resources/templates/provision/yealink/t46u/y000000000108.cfg
+++ b/resources/templates/provision/yealink/t46u/y000000000108.cfg
@@ -374,7 +374,7 @@ static.security.default_ssl_method = {$yealink_security_default_ssl_method}
 static.security.cn_validation = 
 static.security.dev_cert = 
 static.security.ca_cert = 
-static.security.trust_certificates = {$yealink_trust_certificates}
+static.security.trust_certificates = {if $yealink_trust_certificates == "false"}0{elseif $yealink_trust_certificates == "true"}1{/if}
 
 static.security.user_password = {$var_name}:{$var_password}
 static.security.user_password = {$admin_name}:{$admin_password}
@@ -424,7 +424,7 @@ static.auto_provision.encryption.config =
 
 
 #######################################################################################
-##                                   Transfer                                        ##
+##                                   Trnasfer                                        ##
 #######################################################################################
 dialplan.transfer.mode = {$yealink_transfer_mode}
 transfer.on_hook_trans_enable = {$yealink_transfer_onhook}
@@ -478,13 +478,13 @@ features.password_dial.length=
 features.password_dial.prefix=
 features.password_dial.enable=
 features.group_listen_in_talking_enable=
-phone_setting.call_info_display_method = {$yealink_call_info_display_method}
+phone_setting.call_info_display_method = 0
 phone_setting.called_party_info_display.enable = 1
 features.headset_training=
 features.headset_prior=
 features.dtmf.replace_tran =
 features.dtmf.transfer =
-phone_setting.ringing_timeout = {$yealink_ringing_timeout}
+phone_setting.ringing_timeout=
 phone_setting.ringback_timeout=
 
 features.keep_mute.enable=
@@ -593,7 +593,7 @@ voice.tone.congestion =
 voice.tone.busy =
 voice.tone.ring =
 voice.tone.dial =
-voice.tone.country = {$yealink_voice_tone_country}
+voice.tone.country =
 voice.side_tone =
 features.partition_tone =
 voice.tone.secondary_dial=
@@ -1071,24 +1071,24 @@ expansion_module.2.key.{$row.device_key_id}.xml_phonebook =
 
 features.enhanced_dss_keys.enable={$yealink_enhanced_dss_keys}
 edk.id_mode.enable=
-softkey.1.position=
-softkey.1.use.dialing=
-softkey.1.softkey_id=
-softkey.1.use.dialtone=
-softkey.1.use.conferenced=
-softkey.1.use.held=
-softkey.1.use.hold=
-softkey.1.use.transfer_ring_back=
-softkey.1.use.ring_back=
-softkey.1.use.call_failed=
-softkey.1.use.on_talk=
-softkey.1.use.transfer_connecting=
-softkey.1.use.connecting=
-softkey.1.use.incoming_call=
-softkey.1.use.idle=
-softkey.1.action=
-softkey.1.label=
-softkey.1.enable=
+#softkey.1.position=
+#softkey.1.use.dialing=
+#softkey.1.softkey_id=
+#softkey.1.use.dialtone=
+#softkey.1.use.conferenced=
+#softkey.1.use.held=
+#softkey.1.use.hold=
+#softkey.1.use.transfer_ring_back=
+#softkey.1.use.ring_back=
+#softkey.1.use.call_failed=
+#softkey.1.use.on_talk=
+#softkey.1.use.transfer_connecting=
+#softkey.1.use.connecting=
+#softkey.1.use.incoming_call=
+#softkey.1.use.idle=
+#softkey.1.action=
+#softkey.1.label=
+#softkey.1.enable=
 edk.edklist.1.action=
 edk.edklist.1.mname=
 edk.edklist.1.enable=
@@ -1494,14 +1494,10 @@ dialplan_replace_rule.url=
 dialplan.replace.line_id.1=
 dialplan.replace.replace.1=
 dialplan.replace.prefix.1=
-phone_setting.dialnow_delay = {$yealink_dialplan_dialnow_delay}
+phone_setting.dialnow_delay=
 dialplan_dialnow.url=
 dialplan.dialnow.line_id.1=
 dialplan.dialnow.rule.1 = {$yealink_dialplan_dialnow_rule_1}
-dialplan.dialnow.rule.2 = {$yealink_dialplan_dialnow_rule_2}
-dialplan.dialnow.rule.3 = {$yealink_dialplan_dialnow_rule_3}
-dialplan.dialnow.rule.4 = {$yealink_dialplan_dialnow_rule_4}
-dialplan.dialnow.rule.5 = {$yealink_dialplan_dialnow_rule_5}
 dialplan.block_out.line_id.1=
 dialplan.block_out.number.1=
 dialplan.area_code.line_id =
@@ -1576,43 +1572,20 @@ screensaver.xml_browser.url=
 #######################################################################################
 ##                                  Power Saving                                     ##
 #######################################################################################
-features.power_saving.enable = {$yealink_ps_enabled}
-##Written in 24hr
-features.power_saving.power_led_flash.on_time = {$yealink_ps_led_on}
-features.power_saving.power_led_flash.off_time = {$yealink_ps_led_off}
-
-##Written in 24hr, values should be comma delimited, e.g. 9,17
-{if isset($yealink_ps_days_all)}
-features.power_saving.office_hour.monday = {$yealink_ps_days_all}
-features.power_saving.office_hour.tuesday = {$yealink_ps_days_all}
-features.power_saving.office_hour.wednesday = {$yealink_ps_days_all}
-features.power_saving.office_hour.thursday = {$yealink_ps_days_all}
-features.power_saving.office_hour.friday = {$yealink_ps_days_all}
-features.power_saving.office_hour.saturday = {$yealink_ps_days_all}
-features.power_saving.office_hour.sunday = {$yealink_ps_days_all}
-{elseif isset($yealink_ps_days_workweek)}
-features.power_saving.office_hour.monday = {$yealink_ps_days_workweek}
-features.power_saving.office_hour.tuesday = {$yealink_ps_days_workweek}
-features.power_saving.office_hour.wednesday = {$yealink_ps_days_workweek}
-features.power_saving.office_hour.thursday = {$yealink_ps_days_workweek}
-features.power_saving.office_hour.friday = {$yealink_ps_days_workweek}
-features.power_saving.office_hour.saturday = {$yealink_ps_day_saturday}
-features.power_saving.office_hour.sunday = {$yealink_ps_day_sunday}
-{else}
-features.power_saving.office_hour.monday = {$yealink_ps_day_monday}
-features.power_saving.office_hour.tuesday = {$yealink_ps_day_tuesday}
-features.power_saving.office_hour.wednesday = {$yealink_ps_day_wednesday}
-features.power_saving.office_hour.thursday = {$yealink_ps_day_thursday}
-features.power_saving.office_hour.friday = {$yealink_ps_day_friday}
-features.power_saving.office_hour.saturday = {$yealink_ps_day_saturday}
-features.power_saving.office_hour.sunday = {$yealink_ps_day_sunday}
-{/if}
-
-##Written in minutes
-features.power_saving.user_input_ext.idle_timeout = {$yealink_ps_idle_timeout}
-features.power_saving.off_hour.idle_timeout = {$yealink_ps_offhour_timeout}
-features.power_saving.office_hour.idle_timeout = {$yealink_ps_hour_timeout}
-features.power_saving.intelligent_mode = {$yealink_ps_intel_mode}
+features.power_saving.enable=
+features.power_saving.power_led_flash.on_time=
+features.power_saving.power_led_flash.off_time=
+features.power_saving.office_hour.monday=
+features.power_saving.office_hour.tuesday=
+features.power_saving.office_hour.wednesday=
+features.power_saving.office_hour.thursday=
+features.power_saving.office_hour.friday=
+features.power_saving.office_hour.saturday=
+features.power_saving.office_hour.sunday =
+features.power_saving.user_input_ext.idle_timeout=
+features.power_saving.off_hour.idle_timeout=
+features.power_saving.office_hour.idle_timeout=
+features.power_saving.intelligent_mode=
 
 
 #######################################################################################
@@ -1637,12 +1610,7 @@ phone_setting.backgrounds =  Config:yealink_t46u_wallpaper.png
 phone_setting.backgrounds_with_dsskey_unfold=
 
 ##expansion_module.backgrounds(Only support T5XW/T54S/T52S/T43U/T46U/T48U)
-wallpaper_upload.url = {$yealink_t46u_wallpaper_expansion}
-{if isset($yealink_t46u_wallpaper_expansion_filename)}
-expansion_module.backgrounds=Config:{$yealink_t46u_wallpaper_expansion_filename}
-{else}
 expansion_module.backgrounds=
-{/if}
 
 
 #######################################################################################
@@ -2004,3 +1972,4 @@ acd.trace_fixed_display.enable =
 features.parked_call_monitor.blf_visual_enable=
 features.parked_call_monitor.blf_audio_enable=
 features.parked_call_monitor.blf.ring_type=
+
