Add DND Variable to Yealink T54W Template

--- a/resources/templates/provision/yealink/t54w/y000000000096.cfg
+++ b/resources/templates/provision/yealink/t54w/y000000000096.cfg
@@ -1146,8 +1146,8 @@ features.dnd.allow= {$yealink_dnd_allow}
 features.dnd_mode=
 features.dnd.enable=
 
-features.dnd.off_code= {$yealink_forward_always_off_code}
-features.dnd.on_code= {$yealink_forward_always_on_code}
+features.dnd.off_code= {$yealink_dnd_off_code}
+features.dnd.on_code= {$yealink_dnd_on_code}
 
 features.dnd.emergency_authorized_number=
 features.dnd.emergency_enable= 1
