line keys and DND

--- a/resources/templates/provision/yealink/t58w/y000000000150.cfg
+++ b/resources/templates/provision/yealink/t58w/y000000000150.cfg
@@ -754,14 +754,14 @@ phone_setting.ring_duration=
 
 features.dnd_mode = 
 features.dnd.enable = 
-features.dnd.on_code = 
-features.dnd.off_code = 
+features.dnd.on_code = {$yealink_dnd_on_code}
+features.dnd.off_code = {$yealink_dnd_off_code}
 features.dnd_refuse_code = 
 features.dnd.emergency_enable = 
 features.dnd.emergency_authorized_number = 
 
 ###V84SP4新需求新增#######
-features.dnd.allow=
+features.dnd.allow= {$yealink_dnd_allow}
 features.dnd.large_icon.enable=
 features.keep_dnd.enable=
 
@@ -1156,29 +1156,43 @@ features.local_conf.combine_with_one_press.enable=
 ###linekey.X.label = 
 ###linekey.X.extension
 
+{foreach $keys['line'] as $row}
+#Configure Line Key {$row.device_key_id}
+linekey.{$row.device_key_id}.line = {$row.device_key_line}
+linekey.{$row.device_key_id}.value = {$row.device_key_value}
+{if $row.device_key_type == "1" || $row.device_key_type == "16"}
+linekey.{$row.device_key_id}.pickup_value = {$row.device_key_extension}
+{else}
+linekey.{$row.device_key_id}.extension = {$row.device_key_extension}
+{/if}
+linekey.{$row.device_key_id}.type = {$row.device_key_type}
+linekey.{$row.device_key_id}.xml_phonebook =
+linekey.{$row.device_key_id}.label = {$row.device_key_label}
+{/foreach}
+
 ###It configures the desired line to apply the key feature.Integer from 1 to 16
-linekey.1.line = 
+#linekey.1.line = 
 
 ###It configures the value of the line key feature.
 ###For example, when setting the key feature to BLF, it configures the number of the monitored user.
 ###The default value is blank.
-linekey.1.value = 
+#linekey.1.value = 
 
 ###It configures the pickup code for BLF feature or conference ID followed by the # sign for Meet-Me conference feature.
 ###It only applies to BLF and Meet-Me conference features.
 ###The default value is blank.
-linekey.1.extension
+#linekey.1.extension
 
 ###It configures the key feature for the line key X.
-linekey.1.type = 
+#linekey.1.type = 
 
 ###It configures the desired local group/XML group/network group for the line key X.
 ###It only applies to the Local Group, XML Group and Network Group features.
-linekey.1.xml_phonebook =
+#linekey.1.xml_phonebook =
 
 ###It configures the label displayed on the LCD screen for each line key.
 ###The default value is blank.
-linekey.1.label = 
+#linekey.1.label = 
 
 ##########################################################################################
 ##         	               Programmable Key                                             ##
@@ -1192,13 +1206,27 @@ linekey.1.label =
 #programablekey.X.line = 
 #programablekey.X.extension=
 
-programablekey.1.type =
-programablekey.1.line = 
-programablekey.1.value =
+{foreach $keys["programmable"] as $row}
+programablekey.{$row.device_key_id}.type = {$row.device_key_type}
+{if $row.device_key_type == "22" || $row.device_key_type == "47"}
+programablekey.{$row.device_key_id}.xml_phonebook = {$row.device_key_line}
+{else}
+programablekey.{$row.device_key_id}.line = {$row.device_key_line}
+programablekey.{$row.device_key_id}.value = {$row.device_key_value}
+{/if}
+programablekey.{$row.device_key_id}.extension = {$row.device_key_extension}
+programablekey.{$row.device_key_id}.label = {$row.device_key_label}
+programablekey.1.pickup_value ={$row.device_key_extension}
 programablekey.1.history_type =
-programablekey.1.label =
-programablekey.1.xml_phonebook =
-programablekey.1.extension=
+{/foreach}
+
+#programablekey.1.type =
+#programablekey.1.line = 
+#programablekey.1.value =
+#programablekey.1.history_type =
+#programablekey.1.label =
+#programablekey.1.xml_phonebook =
+#programablekey.1.extension=
 
 #######################################################################################  
 ##                                Expansion Key                                      ##
