--- a/resources/templates/provision/polycom/ip6000/{$mac}.cfg
+++ b/resources/templates/provision/polycom/ip6000/{$mac}.cfg
@@ -78,7 +78,7 @@
 		{if isset($polycom_gmt_offset)}device.sntp.gmtOffset.set="1"{/if}
 		device.sntp.gmtOffset="{$polycom_gmt_offset}"
 		device.prov.upgradeServer.set="1"
-		device.prov.upgradeServer="{$polycom_firmware_url}"
+		device.prov.upgradeServer="{$polycom_firmware_url_ip6000}"
 		{if isset($polycom_cdp_enabled)}
 		device.net.cdpEnabled.set="1"
 		device.net.cdpEnabled="{$polycom_cdp_enabled}"
