--- a/resources/templates/provision/polycom/vvx400/{$mac}.cfg
+++ b/resources/templates/provision/polycom/vvx400/{$mac}.cfg
@@ -76,7 +76,7 @@
 		device.sntp.serverName="{$ntp_server_primary}"
 		device.sntp.gmtOffset="{$polycom_gmt_offset}"
 		device.prov.upgradeServer.set="1"
-		device.prov.upgradeServer="{$polycom_firmware_url}"
+		device.prov.upgradeServer="{$polycom_firmware_url_vvx400}"
 		{if isset($admin_password)}
 		device.auth.localUserPassword.set="1" 
 		device.auth.localUserPassword="{$admin_password}"
