Correct the template syntax

--- a/resources/templates/provision/yealink/t58v/y000000000058.cfg
+++ b/resources/templates/provision/yealink/t58v/y000000000058.cfg
@@ -882,7 +882,7 @@ phone_setting.headsetkey_mode =
 features.voice_mail_tone_enable = 
 static.phone_setting.reserve_certs_enable =
 phone_setting.called_party_info_display.enable = 1
-phone_setting.call_info_display_method = ${yealink_call_info_display_method}
+phone_setting.call_info_display_method = {$yealink_call_info_display_method}
 
 
 #######################################################################################
