--- a/resources/templates/provision/yealink/t52s/y000000000074.cfg
+++ b/resources/templates/provision/yealink/t52s/y000000000074.cfg
@@ -445,7 +445,7 @@ features.password_dial.length =
 features.password_dial.prefix =
 features.password_dial.enabl e=
 features.group_listen_in_talking_enabl e=
-phone_setting.call_info_display_method = ${yealink_call_info_display_method}
+phone_setting.call_info_display_method = {$yealink_call_info_display_method}
 phone_setting.called_party_info_display.enable = 1
 features.headset_training=
 features.headset_prior=
