--- a/resources/templates/provision/yealink/t5x/y000000000096.cfg
+++ b/resources/templates/provision/yealink/t5x/y000000000096.cfg
@@ -466,7 +466,7 @@ features.password_dial.length =
 features.password_dial.prefix =
 features.password_dial.enable =
 features.group_listen_in_talking_enable =
-phone_setting.call_info_display_method = ${yealink_call_info_display_method}
+phone_setting.call_info_display_method = {$yealink_call_info_display_method}
 phone_setting.called_party_info_display.enable =
 features.headset_training =
 features.headset_prior =
