Adds an extra line so that internet_port_vid doesn't show up on the same line.

--- a/resources/templates/provision/yealink/t58a/y000000000058.cfg
+++ b/resources/templates/provision/yealink/t58a/y000000000058.cfg
@@ -67,8 +67,11 @@ network.dhcp.server_mac2 =
 #######################################################################################
 ##                                    VLAN                                           ##
 #######################################################################################
-static.network.vlan.internet_port_enable = 
-{if isset($yealink_vlan_enable)}static.network.vlan.internet_port_enable = {$yealink_vlan_enable}{else}static.network.vlan.internet_port_enable = 0{/if}
+{if isset($yealink_vlan_enable)}
+static.network.vlan.internet_port_enable = {$yealink_vlan_enable}
+{else}
+static.network.vlan.internet_port_enable = 0
+{/if}
 static.network.vlan.internet_port_vid = {$yealink_vlan_id}
 static.network.vlan.internet_port_priority = {$yealink_vlan_cos}
 static.network.vlan.pc_port_enable = 
