--- a/resources/templates/provision/fanvil/v67/{$mac}.cfg
+++ b/resources/templates/provision/fanvil/v67/{$mac}.cfg
@@ -431,7 +431,7 @@
         <CallLogDisplayType>0</CallLogDisplayType>
         <EnableRecvSMS>1</EnableRecvSMS>
         <EnableCallHistory>1</EnableCallHistory>
-        <LineDisplayFormat>$name@$protocol$instance</LineDisplayFormat>
+        <LineDisplayFormat>$name</LineDisplayFormat>
         <EnableMWITone>0</EnableMWITone>
         <SIPNotifyXML>1</SIPNotifyXML>
         <BlockXMLWhenCall>1</BlockXMLWhenCall>
@@ -1882,12 +1882,12 @@
         <DeviceCfgFileKey></DeviceCfgFileKey>
         <CommonCfgFileKey></CommonCfgFileKey>
         <DownloadCommonConf>1</DownloadCommonConf>
-        <SaveProvisionInfo>0</SaveProvisionInfo>
+        <SaveProvisionInfo>1</SaveProvisionInfo>
         <CheckFailTimes>5</CheckFailTimes>
-        <FlashServerIP>{if isset($fanvil_provision_url)}{$fanvil_provision_url}{else}https://{$domain_name}/app/provision{/if}</FlashServerIP>
+        <FlashServerIP>{if isset($fanvil_provision_url)}{$fanvil_provision_url}{else}{$domain_name}/app/provision{/if}</FlashServerIP>
         <FlashFileName>{$fanvil_firmware_config}</FlashFileName>
-        <FlashProtocol>2</FlashProtocol>
-        <FlashMode>0</FlashMode>
+        <FlashProtocol>5</FlashProtocol>
+        <FlashMode>1</FlashMode>
         <FlashInterval>1</FlashInterval>
         <updatePBInterval>720</updatePBInterval>
         <pnp>
